crates/sparrow-compiler/tests/snapshots/compiler_golden_tests__basic_sum_when_event.snap
---
source: sparrow-compiler/tests/compiler_golden_tests.rs
expression: compute_plan
---
per_entity_behavior: 1
operations:
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: sender
                  data_type:
                    kind:
                      Primitive: 10
                - name: amount
                  data_type:
                    kind:
                      Primitive: 13
                - name: receiver
                  data_type:
                    kind:
                      Primitive: 10
                - name: store
                  data_type:
                    kind:
                      Primitive: 10
        output: false
        operator:
          Input:
            producing_operation: 0
            input_column: 0
            interpolation: 1
            column:
              ScanRecord: ~
      - arguments: []
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Literal:
            literal:
              Float64: 10
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: amount
      - arguments:
          - 0
          - 2
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Instruction: field_ref
      - arguments:
          - 3
          - 1
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Instruction: gt
      - arguments: []
        result_type:
          kind:
            Primitive: 1
        output: false
        operator:
          Literal:
            literal: ~
      - arguments:
          - 3
          - 5
          - 5
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Instruction: sum
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: sum_amount
      - arguments:
          - 7
          - 6
        result_type:
          kind:
            Struct:
              fields:
                - name: sum_amount
                  data_type:
                    kind:
                      Primitive: 13
        output: true
        operator:
          Instruction: record
    operator:
      Scan:
        table_id:
          high: 1233317930569911709
          low: 9279388510107214504
        schema:
          fields:
            - name: sender
              data_type:
                kind:
                  Primitive: 10
            - name: amount
              data_type:
                kind:
                  Primitive: 13
            - name: receiver
              data_type:
                kind:
                  Primitive: 10
            - name: store
              data_type:
                kind:
                  Primitive: 10
        slice_plan:
          table_name: Sent
          slice: ~
  - expressions:
      - arguments: []
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          LateBound: 1
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: sum_amount
                  data_type:
                    kind:
                      Primitive: 13
        output: true
        operator:
          Input:
            producing_operation: 0
            input_column: 4
            interpolation: 2
            column:
              ProducerExpression: 8
      - arguments:
          - 1
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          Instruction: time_of
      - arguments:
          - 2
          - 0
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Instruction: gte
    operator:
      Select:
        input: 0
        condition:
          producing_operation: 0
          input_column: 3
          interpolation: 1
          column:
            ProducerExpression: 4
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: sum_amount
                  data_type:
                    kind:
                      Primitive: 13
        output: true
        operator:
          Input:
            producing_operation: 1
            input_column: 3
            interpolation: 2
            column:
              ProducerExpression: 1
    operator:
      Select:
        input: 1
        condition:
          producing_operation: 1
          input_column: 4
          interpolation: 1
          column:
            ProducerExpression: 3
primary_grouping: account
primary_grouping_key_type:
  kind:
    Primitive: 10

