crates/sparrow-compiler/tests/snapshots/compiler_golden_tests__cast_in_record.snap
---
source: sparrow-compiler/tests/compiler_golden_tests.rs
expression: compute_plan
---
per_entity_behavior: 1
operations:
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: key
                  data_type:
                    kind:
                      Primitive: 10
                - name: f64
                  data_type:
                    kind:
                      Primitive: 13
                - name: i64
                  data_type:
                    kind:
                      Primitive: 6
        output: false
        operator:
          Input:
            producing_operation: 0
            input_column: 0
            interpolation: 1
            column:
              ScanRecord: ~
      - arguments: []
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          LateBound: 1
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: f64
      - arguments:
          - 0
          - 2
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Instruction: field_ref
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: x
      - arguments:
          - 4
          - 3
        result_type:
          kind:
            Struct:
              fields:
                - name: x
                  data_type:
                    kind:
                      Primitive: 13
        output: false
        operator:
          Instruction: record
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: i64
      - arguments:
          - 0
          - 6
        result_type:
          kind:
            Primitive: 6
        output: false
        operator:
          Instruction: field_ref
      - arguments:
          - 7
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Instruction: cast
      - arguments:
          - 4
          - 8
        result_type:
          kind:
            Struct:
              fields:
                - name: x
                  data_type:
                    kind:
                      Primitive: 13
        output: false
        operator:
          Instruction: record
      - arguments:
          - 9
          - 5
        result_type:
          kind:
            Struct:
              fields:
                - name: x
                  data_type:
                    kind:
                      Primitive: 13
        output: true
        operator:
          Instruction: coalesce
      - arguments:
          - 10
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          Instruction: time_of
      - arguments:
          - 11
          - 1
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Instruction: gte
    operator:
      Scan:
        table_id:
          high: 2462800628842057117
          low: 9279388510107214504
        schema:
          fields:
            - name: key
              data_type:
                kind:
                  Primitive: 10
            - name: f64
              data_type:
                kind:
                  Primitive: 13
            - name: i64
              data_type:
                kind:
                  Primitive: 6
        slice_plan:
          table_name: Primitive
          slice: ~
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: x
                  data_type:
                    kind:
                      Primitive: 13
        output: true
        operator:
          Input:
            producing_operation: 0
            input_column: 3
            interpolation: 1
            column:
              ProducerExpression: 10
    operator:
      Select:
        input: 0
        condition:
          producing_operation: 0
          input_column: 4
          interpolation: 1
          column:
            ProducerExpression: 12
primary_grouping: Primitive
primary_grouping_key_type:
  kind:
    Primitive: 10

