crates/sparrow-compiler/tests/snapshots/compiler_golden_tests__incompatible_err.snap
---
source: sparrow-compiler/tests/compiler_golden_tests.rs
expression: compute_plan

---
Incompatible types for any: f64, string
